# employee-app-backend-1

./: .dockerignore  .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  assignment.txt  config.py  docker-compose.yml  example.py  example.txt  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 12190f59c541_employee_role.py  1f0ebd384693_init.py  28a1d9f552bf_add_password_to_employee_py.py  9ab9d0f19443_update_employee_schema_fields_and_roles.py  9b0b68baa6fc_unique_constrant_added.py  c2f86b3be74e_address_added.py  ceade6077b48_department_added.py
auth/: dependencies.py  router.py  schemas.py  service.py  utils.py
database/: __init__.py  connection.py
departments/: __init__.py  repo.py  router.py  schemas.py  service.py
employees/: __init__.py  repo.py  router.py  schemas.py  service.py
exceptions/: __init__.py  handler.py
middleware/: __init__.py  logger.py
models/: __init__.py  address.py  department.py  employee.py  employee_x_department.py  entity.py
repositories/: employee_repo.py
routers/: __init__.py  employee_router.py
services/: employee_service.py
tests/: conftest.py  test_auth_utils.py  test_employee_service.py  test_employees_api.py  test_exception.py  test_health_api.py  test_smoke.py
